kubernetes/apps/wger/wger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryot
  namespace: health
  labels:
    app.kubernetes.io/name: ryot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ryot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ryot
    spec:
      containers:
      - name: ryot
        image: ghcr.io/ignisda/ryot:latest
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            cpu: 20m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ryot-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ryot
  namespace: health
  labels:
    app.kubernetes.io/name: ryot
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: http
  selector:
    app.kubernetes.io/name: ryot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ryot-ingress
  namespace: health
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: health.vijaysingh.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ryot
            port:
              number: 80
